--- a/s_coder/package.json
+++ b/s_coder/package.json
@@ -14,6 +14,7 @@
     "better-scroll": "^1.4.2",
     "element-ui": "^2.0.5",
     "express": "^4.16.2",
+    "less-loader": "^4.0.5",
     "mint-ui": "^2.2.10",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
