--- a/s_coder/.babelrc
+++ b/s_coder/.babelrc
@@ -5,7 +5,9 @@
     }],
     "stage-2"
   ],
-  "plugins": ["transform-runtime"],
+  "plugins": ["transform-runtime",["component",[
+          {"libraryName":"mint-ui","style":true}
+      ]]],
   "env": {
     "test": {
       "presets": ["env", "stage-2"]    }
