--- a/s_coder/package.json
+++ b/s_coder/package.json
@@ -13,8 +13,10 @@
     "axios": "^0.17.1",
     "babel-plugin-component": "^0.10.1",
     "better-scroll": "^1.4.2",
+    "cropperjs": "^1.1.3",
     "element-ui": "^2.0.5",
     "express": "^4.16.2",
+    "less": "^2.7.3",
     "less-loader": "^4.0.5",
     "mint-ui": "^2.2.12",
     "stylus": "^0.54.5",
@@ -42,6 +44,7 @@
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
+    "less-loader": "^4.0.5",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
