--- a/s_coder/package.json
+++ b/s_coder/package.json
@@ -23,6 +23,7 @@
     "stylus-loader": "^3.0.1",
     "vee-validate": "^2.0.0-rc.22",
     "vue": "^2.5.2",
+    "vue-cropper": "^0.2.7",
     "vue-resource": "^1.3.4",
     "vue-router": "^3.0.1",
     "vue-style-loader": "^3.0.3"
