--- a/s_coder/package.json
+++ b/s_coder/package.json
@@ -15,6 +15,7 @@
     "better-scroll": "^1.4.2",
     "cropperjs": "^1.1.3",
     "element-ui": "^2.0.5",
+    "exif-js": "^2.3.0",
     "express": "^4.16.2",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
