--- a/s_coder/package.json
+++ b/s_coder/package.json
@@ -20,6 +20,8 @@
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
     "mint-ui": "^2.2.12",
+    "node-sass": "^4.7.2",
+    "sass-loader": "^6.0.6",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
     "vee-validate": "^2.0.0-rc.22",
