--- a/s_coder/package.json
+++ b/s_coder/package.json
@@ -19,9 +19,11 @@
     "express": "^4.16.2",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
+    "mavon-editor": "^2.4.16",
     "mint-ui": "^2.2.12",
     "moment": "^2.20.1",
     "node-sass": "^4.7.2",
+    "qs": "^6.5.1",
     "sass-loader": "^6.0.6",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
