--- a/s_coder/package.json
+++ b/s_coder/package.json
@@ -18,6 +18,7 @@
     "exif-js": "^2.3.0",
     "express": "^4.16.2",
     "js-md5": "^0.7.3",
+    "jsonp": "^0.2.1",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
     "mavon-editor": "^2.4.16",
